--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LACI Restaurant Hub</title>
-</head>
-
-<body>
-    <h1>Project Home</h1>
-</body>
-
-</html>
+<% layout("./layout/boilerplate") %>
+<h1>Project Home</h1>
