--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -1,6 +1,7 @@
 <% layout("./layout/boilerplate") %>
 <img style="width: 600px" src="<%=restaurant.image%>" alt="">
 <h1><%= restaurant.name %></h1>
+<p>Opened: <%= restaurant.dateOpened %></p>
 <h2><%= restaurant.location %> <span><%= restaurant.price %></span></h2>
 
 <p><%= restaurant.description%></p>
