--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,14 +6,31 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <div class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/restaurants">Restarants</a>
+                    <a class="nav-link" aria-current="page" href="/restaurants">Restarants</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/restaurants/new">Create New Restarant</a>
                 </li>
-            </ul>
+            </div>
+            <div class="navbar-nav ml-auto">
+                <% if(!user) { %>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+                <% }  else { %>
+                <li class="nav-item">
+                    <a class="nav-link">Welcome, <%= user.username  %> </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+                <% } %>
+            </div>
         </div>
     </div>
 </nav>
