--- a/public/styles.css
+++ b/public/styles.css
@@ -1,1 +1,42 @@
+/* Image checkboxes */
 
+.fancy-checkbox-label > input[type='checkbox'] {
+	position: absolute;
+	opacity: 0;
+	cursor: inherit;
+}
+.fancy-checkbox-label {
+	font-weight: normal;
+	cursor: pointer;
+}
+.fancy-checkbox:before {
+	font-family: FontAwesome;
+	content: '\f00c';
+	background: #fff;
+	color: transparent;
+	border: 3px solid #ddd;
+	border-radius: 3px;
+	z-index: 1;
+}
+.fancy-checkbox-label:hover > .fancy-checkbox:before,
+input:focus + .fancy-checkbox:before {
+	border-color: #bdbdff;
+}
+.fancy-checkbox-label:hover > input:not(:checked) + .fancy-checkbox:before {
+	color: #eee;
+}
+input:checked + .fancy-checkbox:before {
+	color: #c12727;
+	background: #ffffff;
+	border-color: #ffffff;
+}
+.fancy-checkbox-img:before {
+	position: absolute;
+	margin: 20px;
+	line-height: normal;
+}
+input:checked + .fancy-checkbox-img + img {
+	transform: scale(0.99);
+	box-shadow: 0 0 5px #bdbdff;
+	border: solid 4px #c52e2e;
+}
