--- a/public/styles.css
+++ b/public/styles.css
@@ -40,3 +40,14 @@ input:checked + .fancy-checkbox-img + img {
 	box-shadow: 0 0 5px #bdbdff;
 	border: solid 4px #c52e2e;
 }
+
+/* Hero Image */
+.hero {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url('https://images.unsplash.com/photo-1466978913421-dad2ebd01d17?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1867&q=80');
+	object-fit: cover;
+	background-repeat: no-repeat;
+	object-position: center;
+	height: 80vh;
+	width: 100%;
+}
