--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto bg-transparent">
 	<div class="container">
-		<p class="my-2">Capstone</p>
+		<!-- <p class="my-2">Capstone</p> -->
 	</div>
 </footer>
