--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+<nav class="mt-4 navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container">
-        <a class="navbar-brand" href="/">LACI Restaurant Hub</a>
+        <a class="navbar-brand" href="/">The Restaurant Hub</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
