--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -1,11 +1,26 @@
 <% layout("./layout/boilerplate") %>
-<h1>All Restaurants</h1>
-<div>
-    <a href="/restaurants/new">Create a new
-        restaurant</a>
-</div>
-<ul>
+<img class="h-96 object-cover w-full object-middle rounded-lg"
+    src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
+    alt="">
+<p class="mt-12 text-gray-600 text-3xl tracking-wide italic">The Favorite Restaurants of the Fellows</p>
+<ul class="mt-4 flex flex-wrap">
     <% for (let restaurant of restaurants) {%>
-    <li><a href="restaurants/<%= restaurant.id %>"><%= restaurant.name %></a></li>
+    <li class="sm:w-1/2 lg:w-3/12 mb-12 pr-6 group-hover:text-green-700">
+
+        <a class="hover:text-green-700" href="restaurants/<%= restaurant.id %>">
+            <img class="h-48 object-cover w-full rounded-lg" src="<%=restaurant.image[0].url%>" alt="">
+            <div class="mt-2 flex justify-between">
+                <div>
+                    <p class="text-3xl tracking-wide"><%= restaurant.name %></p>
+                    <p class="text-gray-400 text-xs"><%= restaurant.location %></p>
+                    <p class="text-xs text-green-700 mt-1">Opened: <%= restaurant.dateOpened %></p>
+                    <p class="mt-1"><%= restaurant.description %></p>
+                </div>
+                <div>
+                    <p class="mt-2 text-right"><%= restaurant.price %></p>
+                </div>
+            </div>
+        </a>
+    </li>
     <% } %>
 </ul>
