--- a/views/restaurants/new.ejs
+++ b/views/restaurants/new.ejs
@@ -1,6 +1,6 @@
 <% layout("./layout/boilerplate") %>
 <h1 class="text-center">Create a new Restaurant</h1>
-<div class="col-6 offset-3">
+<div class="w-3/4 md:w-1/2 mx-auto col-6 offset-3">
     <form class="needs-validation" action="/restaurants" method="POST" novalidate enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label" for="name">Name</label>
