--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,13 +1,15 @@
 <% layout("./layout/boilerplate") %>
-<h1>Login</h1>
-<form action="/login" class="needs-validation" method="POST" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input class="form-control" type="text" id="username" name="username" required>
-    </div>
-    <div class="mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input class="form-control" type="password" id="password" name="password" required>
-    </div>
-    <button>Login</button>
-</form>
+<div class="mt-24 md:w-1/4 mx-auto">
+    <h1 class="text-center text-2xl">Login</h1>
+    <form action="/login" class="mt-8 needs-validation" method="POST" novalidate>
+        <div class="mb-3">
+            <label class="form-label" for="username">Username</label>
+            <input class="form-control" type="text" id="username" name="username" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="password">Password</label>
+            <input class="form-control" type="password" id="password" name="password" required>
+        </div>
+        <button class="mt-8 bg-green-400 block w-full rounded py-2 text-xl text-green-100">Login</button>
+    </form>
+</div>
